image update new

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Devine Show</title>
+    <title>Bhanu Rathore</title>
 
       
     
@@ -228,8 +228,9 @@ id="sidebarNav" aria-labelledby="hamburgerIcon" data-parent="#accordionSidebar">
         <div class="row align-items-center">
 
             <div class="col-12 col-md-5 col-lg-5">
-                <div class="about-model-img" data-aos="fade-up">
-                    <img src="images/aboutMe.png">
+                <div class="about-model-img mb-3 mb-md-0" data-aos="fade-up">
+                    <img class="d-none d-md-block" src="images/aboutMe.png">
+                    <img class="d-block d-md-none" src="./images/mobileAbout.png">
                 </div>
             </div>
 
