--- a/home.html
+++ b/home.html
@@ -228,8 +228,9 @@ id="sidebarNav" aria-labelledby="hamburgerIcon" data-parent="#accordionSidebar">
         <div class="row align-items-center">
 
             <div class="col-12 col-md-5 col-lg-5">
-                <div class="about-model-img" data-aos="fade-up">
-                    <img src="images/aboutpc.png">
+                <div class="about-model-img mb-4 mb-md-0" data-aos="fade-up">
+                    <img class="d-none d-md-block" src="images/aboutpc.png">
+                    <img class="d-block d-md-none" src="images/MobileAbout.png">
                 </div>
             </div>
 
