image update new

--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@ id="sidebarNav" aria-labelledby="hamburgerIcon" data-parent="#accordionSidebar">
                         <p>
                             <b class="text-white">With</b>  a keen eye for aesthetics and a passion for user-centered design, I craft visually captivating and interactive web experiences that transform brands and engage audiences.
                         </p>
-                        <a class="DownloadCV-btn" download="OurBag" target="_blank" href="images/bag.png"><i class="fa-solid fa-download"></i>Download CV</a>
+                        <a class="DownloadCV-btn" download="OurBag" target="_blank" href="/BhanuResume.pdf"><i class="fa-solid fa-download"></i>Download CV</a>
                     </div>
                 </div>
             </div>
